Replace complex fileToURL method with the now-available Java methods. Fixes #28